form stretch on mobile fix
oopsie doopsie /shrug

--- a/epic.css
+++ b/epic.css
@@ -242,7 +242,7 @@ font-display:auto;font-style:bold;font-weight:1600;
     font-family: cooper-black-std, serif;
     padding: 6vw;
     padding-top: 7vw;
-    width: 75%;
+    width: 90%;
     min-width: 300px;
     font-size: 16px;
     font-weight: 1600;
